# sql-8week-danny

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  TODOs.md  docker-compose.yml  justfile  pyproject.toml
app/: app.toml  st_sql.py  st_sqlchat.py
notebooks/: config.toml  postgres.ipynb  serious_dvd.ipynb  sqlglot.ipynb  week1.ipynb  week1_refactored.ipynb  week1_simple.html  week1_simple.ipynb
sql/: week1.sql  week2.sql
sql/week1/: q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql
src/sql_8week_danny/: sql_engine.py  sql_engine2.py  sql_validate.py
