[project]
name = "sql-8week-danny"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "duckdb>=0.10.2",
    "pandas>=2.2.2",
    "loguru>=0.7.2",
    "notebook>=7.1.3",
    "streamlit>=1.33.0",
    "watchdog>=4.0.0",
    "tabulate>=0.9.0",
    "sqlglot>=23.11.2",
    "rich>=13.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.0",
]
tools = [
    "pre-commit>=3.7.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
